--- a/backend/env.production.example
+++ b/backend/env.production.example
@@ -21,3 +21,6 @@ STATIC_URL=/static/
 
 # 미디어 파일 URL
 MEDIA_URL=/media/ 
+
+# 미디어 파일 URL
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000 
