--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.5.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
