--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.54",
+    "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.6",
@@ -28,16 +31,13 @@
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.5.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.4.0-canary.51",
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.54",
-    "@types/react-dom": "^18.2.18",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.0",
-    "typescript": "^5.3.3"
+    "eslint-config-next": "^14.2.0"
   }
 }
