--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.5.0",
     "swr": "^2.2.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.4.0-canary.51",
