--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.6",
     "next": "^14.2.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
